# dbgflow

./: .gitignore  AGENTS.md  Cargo.toml  GOALS.md  README.md  README.zh-CN.md
crates/dbgflow-common/: Cargo.toml
crates/dbgflow-common/src/: error.rs  ids.rs  job.rs  lib.rs  logging.rs  process.rs  proxy.rs  validation.rs
crates/dbgflow-common/src/artifacts/: manager.rs  mod.rs
crates/dbgflow-core/: Cargo.toml
crates/dbgflow-core/src/: error.rs  lib.rs  logging.rs  proxy.rs
crates/dbgflow-core/src/artifacts/: manager.rs  mod.rs
crates/dbgflow-core/src/backend/: mock.rs  mod.rs
crates/dbgflow-core/src/backend/dbgeng/: mod.rs  resolver.rs
crates/dbgflow-core/src/policy/: command.rs  mod.rs
crates/dbgflow-core/src/profile/: collector.rs  id.rs  manager.rs  mod.rs  model.rs  native_etw.rs  procmon.rs  target.rs
crates/dbgflow-core/src/session/: manager.rs  mod.rs  state.rs  worker.rs
crates/dbgflow-core/src/ttd/: mod.rs
crates/dbgflow-core/tests/: dbgeng_analyze.rs  dbgeng_process.rs  facade_compat.rs  native_etw_profile.rs  procmon_profile.rs  profile_lifecycle.rs  session_lifecycle.rs  ttd_recording.rs
crates/dbgflow-debug/: Cargo.toml
crates/dbgflow-debug/src/: lib.rs
crates/dbgflow-debug/src/backend/: mod.rs
crates/dbgflow-debug/src/backend/dbgeng/: mod.rs  resolver.rs
crates/dbgflow-debug/src/session/: audit.rs  manager.rs  mod.rs  operation.rs  state.rs  validation.rs  worker.rs  worker_registry.rs
crates/dbgflow-mcp/: Cargo.toml
crates/dbgflow-mcp/src/: http.rs  lib.rs  logging.rs  main.rs  mcp.rs  runtime.rs  service.rs  tools.rs
crates/dbgflow-mcp/src/tools/: adapters.rs  debug.rs  mod.rs  registry.rs  schema.rs  trace.rs
crates/dbgflow-mcp/tests/: live_e2e.rs
crates/dbgflow-reverse/: Cargo.toml
crates/dbgflow-reverse/src/: lib.rs
crates/dbgflow-reverse/src/ida/: dynamic.rs  install.rs  manager.rs  mod.rs  model.rs  target.rs  worker.rs
crates/dbgflow-trace/: Cargo.toml
crates/dbgflow-trace/src/: lib.rs
crates/dbgflow-trace/src/profile/: collector.rs  manager.rs  mod.rs  model.rs  native_etw.rs  target.rs
crates/dbgflow-trace/src/profile/native_etw/: settings.rs  stack.rs
crates/dbgflow-trace/src/ttd/: args.rs  mod.rs  validation.rs
docs/reference/: dbgeng-symbol-path.md  idalib-integration.md  ttd-recording.md
docs/superpowers/plans/: 2026-06-07-native-etw-run-profile.md  2026-06-07-procmon-parallel-collectors.md
docs/superpowers/specs/: 2026-06-07-native-etw-run-profile-design.md  2026-06-07-procmon-parallel-collectors-design.md
scripts/: install-codex-mcp.ps1  install-service.ps1  uninstall-service.ps1
