[workspace]
members = [
    "crates/dbgflow-common",
    "crates/dbgflow-core",
    "crates/dbgflow-debug",
    "crates/dbgflow-mcp",
    "crates/dbgflow-reverse",
    "crates/dbgflow-trace",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = ""

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
libloading = "0.8"
