[package]
name = "dbgflow-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
dbgflow-common = { path = "../dbgflow-common" }
dbgflow-debug = { path = "../dbgflow-debug" }
dbgflow-reverse = { path = "../dbgflow-reverse" }
dbgflow-trace = { path = "../dbgflow-trace" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
